--- a/Copy_of_Assignment_1.ipynb
+++ b/Copy_of_Assignment_1.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/hemanth7205/Hemanth/blob/main/Copy_of_Assignment_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -41,7 +52,7 @@
       "metadata": {
         "id": "s07c7JK7Oqt-"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -50,25 +61,10 @@
         "s.split()"
       ],
       "metadata": {
-        "id": "6mGVa3SQYLkb",
-        "outputId": "43135af0-4076-4f8d-edbd-0e31fe323cfa",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "6mGVa3SQYLkb"
       },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['Hi', 'there', 'Sam!']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 7
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -90,7 +86,7 @@
       "metadata": {
         "id": "_ZHoml3kPqic"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -99,22 +95,10 @@
         "print(\"the diameter of {} is {} kilometers\".format(planet,diameter))"
       ],
       "metadata": {
-        "id": "HyRyJv6CYPb4",
-        "outputId": "67e65dcd-6ea3-4944-c2b3-a27840ae3511",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "HyRyJv6CYPb4"
       },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "the diameter of Earth is 12742 kilometers\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -133,7 +117,7 @@
       "metadata": {
         "id": "fcVwbCc1QrQI"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -142,22 +126,10 @@
         "print(d['k1'][3]['tricky'][3]['target'][3])"
       ],
       "metadata": {
-        "id": "MvbkMZpXYRaw",
-        "outputId": "f2b78235-19d0-4c59-8ff4-7d104d3a9649",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "MvbkMZpXYRaw"
       },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "hello\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -176,7 +148,7 @@
       "metadata": {
         "id": "LLiE_TYrhA1O"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -196,22 +168,10 @@
         "print(array)"
       ],
       "metadata": {
-        "id": "NHrirmgCYXvU",
-        "outputId": "8a4009b3-2931-40a6-98be-85b7ca12f170",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "NHrirmgCYXvU"
       },
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -221,7 +181,7 @@
       "metadata": {
         "id": "e4005lsTYXxx"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -241,7 +201,7 @@
       "metadata": {
         "id": "oAI2tbU2Yag-"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -261,7 +221,7 @@
       "metadata": {
         "id": "tOlEVH7BYceE"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -279,12 +239,12 @@
       "source": [
         "a = np.array([1,2,4])\n",
         "b = np.array([4,5,6])\n",
-        "c = np.concatenate((a,b))"
+        "c = np.concatenate((a,b))\n"
       ],
       "metadata": {
         "id": "rAPSw97aYfE0"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -313,7 +273,7 @@
       "metadata": {
         "id": "T5OxJRZ8uvR7"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -324,24 +284,10 @@
         "print(df)"
       ],
       "metadata": {
-        "id": "xNpI_XXoYhs0",
-        "outputId": "3bb15fb1-16f5-4f63-f401-9bd02f563fd2",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "xNpI_XXoYhs0"
       },
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "     g\n",
-            "0  100\n",
-            "1  200\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -360,62 +306,10 @@
         "  print(val)"
       ],
       "metadata": {
-        "id": "dgyC0JhVYl4F",
-        "outputId": "3496c0b9-6bd1-4461-fa36-280e2c3d5f58",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "dgyC0JhVYl4F"
       },
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2023-01-01 00:00:00\n",
-            "2023-01-02 00:00:00\n",
-            "2023-01-03 00:00:00\n",
-            "2023-01-04 00:00:00\n",
-            "2023-01-05 00:00:00\n",
-            "2023-01-06 00:00:00\n",
-            "2023-01-07 00:00:00\n",
-            "2023-01-08 00:00:00\n",
-            "2023-01-09 00:00:00\n",
-            "2023-01-10 00:00:00\n",
-            "2023-01-11 00:00:00\n",
-            "2023-01-12 00:00:00\n",
-            "2023-01-13 00:00:00\n",
-            "2023-01-14 00:00:00\n",
-            "2023-01-15 00:00:00\n",
-            "2023-01-16 00:00:00\n",
-            "2023-01-17 00:00:00\n",
-            "2023-01-18 00:00:00\n",
-            "2023-01-19 00:00:00\n",
-            "2023-01-20 00:00:00\n",
-            "2023-01-21 00:00:00\n",
-            "2023-01-22 00:00:00\n",
-            "2023-01-23 00:00:00\n",
-            "2023-01-24 00:00:00\n",
-            "2023-01-25 00:00:00\n",
-            "2023-01-26 00:00:00\n",
-            "2023-01-27 00:00:00\n",
-            "2023-01-28 00:00:00\n",
-            "2023-01-29 00:00:00\n",
-            "2023-01-30 00:00:00\n",
-            "2023-01-31 00:00:00\n",
-            "2023-02-01 00:00:00\n",
-            "2023-02-02 00:00:00\n",
-            "2023-02-03 00:00:00\n",
-            "2023-02-04 00:00:00\n",
-            "2023-02-05 00:00:00\n",
-            "2023-02-06 00:00:00\n",
-            "2023-02-07 00:00:00\n",
-            "2023-02-08 00:00:00\n",
-            "2023-02-09 00:00:00\n",
-            "2023-02-10 00:00:00\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -438,7 +332,7 @@
       "metadata": {
         "id": "_XMC8aEt0llB"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -449,7 +343,7 @@
       "metadata": {
         "id": "knH76sDKYsVX"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     }
   ]
